# core-eng

./: .gitignore  Cargo.toml
automations/: fund.sh
bitcoin-scripting/: Cargo.toml
degen-base-coordinator/: Cargo.toml
degen-base-coordinator/conf/: coordinator.toml
degen-base-coordinator/src/: coordinator.rs
degen-base-signer/: Cargo.toml
degen-base-signer/conf/: signer1.toml  signer2.toml  signer3.toml
degen-base-signer/src/: bitcoin_node.rs  bitcoin_scripting.rs  bitcoin_wallet.rs  config.rs  lib.rs  peg_wallet.rs  signer.rs  signing_round.rs  stacks_wallet.rs
degen-coordinator/: Cargo.toml  README.md
degen-coordinator/conf/: coordinator.toml  signer.toml
degen-coordinator/src/: bitcoin_node.rs  bitcoin_wallet.rs  config.rs  coordinator.rs  main.rs  peg_wallet.rs
degen-signer/conf/: signer.toml
degen-signer/src/: main.rs
degen-superior-coordinator/: Cargo.toml
degen-superior-coordinator/conf/: coordinator.toml  signer.toml
degen-superior-coordinator/src/: config.rs  coordinator.rs  main.rs  util.rs
degen-superior-signer/: Cargo.toml
degen-superior-signer/conf/: signer1.toml  signer2.toml  signer3.toml
degen-superior-signer/src/: main.rs
frost-coordinator/: Cargo.toml
frost-coordinator/src/: coordinator.rs
frost-signer/: Cargo.toml
frost-signer/conf/: signer.toml
frost-signer/src/: bitcoin_node.rs  config.rs  lib.rs  scripting.rs  signer.rs  signing_round.rs  state_machine.rs
old-tm/frost-coordinator/: Cargo.toml
old-tm/stacks-coordinator/: Cargo.toml
test-vectors/: Cargo.toml
utils/frost-test/: Cargo.toml
(+13 files in other folders)
