[package]
name = "degen-superior-coordinator"
version = "0.0.1"
license = "GPLv3"
homepage = "https://github.com/Trust-Machines/core-eng"
repository = "https://github.com/Trust-Machines/core-eng"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = { workspace = true }
blockstack-core = { workspace = true }
bitcoin.workspace = true
clap = { workspace = true }
degen-base-coordinator = { path = "../degen-base-coordinator" }
degen-base-signer = { path = "../degen-base-signer" }
rusqlite = { workspace = true }
degen-superior-signer = { path = "../degen-superior-signer" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
wsts = { workspace = true }
backoff = { workspace = true }
ureq.workspace = true
url = { workspace = true }
hex.workspae = true
reqwest = { version = "0.11.14", features = ["blocking", "json"] }

[dev-dependencies]
mockall = { workspace = true }
rand = "0.8.5"
#test-utils = { path = "../test-utils" }
tempdir = "0.3.7"
